# Kanji_Grid_Anki_Convertor

./: .gitignore  README.md  pyproject.toml
addon/kanji_grid_anki_converter/: __init__.py  dialog.py  duplicate.py  manifest.json  tiles.py
scripts/: package_addon.py
src/kanji_grid_anki_converter/: __init__.py  anki.py  cli.py  tiles.py
src/kanji_grid_anki_converter/data/: kanji_tile_codes.json
tests/: test_addon_dialog.py  test_addon_duplicate.py  test_anki.py  test_tiles.py
